fix cut offf dialogs

--- a/stylus/elements/dialog.styl
+++ b/stylus/elements/dialog.styl
@@ -15,6 +15,7 @@
 		transition: opacity 500ms
 		max-width: 100%
 		white-space: normal
+		overflow: auto
 		.body
 			position: relative
 			height: 100%
